# localstack-on-k8s

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
l8k/: deploy.py  install.py  run.py
