;[metadata]
;name = ...
;description = ...
;url = ...
;version = ...
;author = LocalStack Contributors
;author_email = info@localstack.cloud
;license = Apache License 2.0

[options]
install_requires =
    flake8<5.0.0
    flake8-black==0.3.2
    flake8-isort>=4.0.0
    flake8-quotes>=0.11.0
    localstack
    pyproject-flake8
